feat: add admin crystal grants
